parse app sig rule

--- a/sig.conf
+++ b/sig.conf
@@ -1,14 +1,55 @@
+#######################################
+#
+# sig_id = APPID:CATE:INDEX
+#
+#
+#######################################
 application {
     appid 1;
-    appname youku;
+    appname Youku;
     category 0x22;
-    sig http_method=GET&http_url=flv&http_host=youku;
+    sign {
+        youku_flv_sig {
+            sig_id       0x1;
+            sig_proto    HTTP;
+            sig_type     AC_MULTI;
+            sig_enable   1;
+            sig_priority 1;
+            sig_match http_method=GET&http_url=flv&http_host=youku;
+        }
+        youku_wma_sig {
+            sig_id    0x2;
+            sig_proto HTTP;
+            sig_type  REGEX;
+            sig_enable   0;
+            sig_priority 2;
+            sig_match GET.*wma.*youku;
+        }
+    }
 }
 
 application {
     appid 2;
-    appname tudou;
+    appname QQ;
     category 0x23;
-    sig http_method=GET&http_url=flv&http_host=tudou;
+    sign {
+        qq_udp_sig {
+            sig_id    0x3;
+            sig_proto UDP;
+            sig_type  AC_MULTI;
+            sig_enable   1;
+            sig_priority 4;
+          
+            sig_match tcp_payload=aaa&tcp_payload[4]=bbb;
+        }
+        qq_tcp_sig {
+            sig_id    0x4;
+            sig_proto TCP;
+            sig_type  AC;
+            sig_enable   0;
+            sig_priority 5;
+            sig_match tcp_payload[10]=\xff\xff\xff;
+        }
+    }
 }
 
