add dir for sig-description

--- a/sig.conf
+++ b/sig.conf
@@ -15,6 +15,7 @@ application {
             sig_type     AC_MULTI;
             sig_enable   1;
             sig_priority 1;
+            sig_dir 0;
             sig_match http_method=GET&http_url=flv&http_host=youku;
         }
         youku_wma_sig {
@@ -23,6 +24,7 @@ application {
             sig_type  REGEX;
             sig_enable   0;
             sig_priority 2;
+            sig_dir 0;
             sig_match GET.*wma.*youku;
         }
     }
@@ -39,7 +41,7 @@ application {
             sig_type  AC_MULTI;
             sig_enable   1;
             sig_priority 4;
-          
+            sig_dir 1;
             sig_match tcp_payload=aaa&tcp_payload[4]=bbb;
         }
         qq_tcp_sig {
@@ -48,6 +50,7 @@ application {
             sig_type  AC;
             sig_enable   0;
             sig_priority 5;
+            sig_dir 1;
             sig_match tcp_payload[10]=\xff\xff\xff;
         }
     }
